added UME integration

--- a/info.toml
+++ b/info.toml
@@ -2,7 +2,8 @@
 name        = "Glacial Medals"
 author      = "Mattynator"
 category    = "MattyPlugins"
-version     = "0.1.0"
+version     = "0.1.1"
 
 [script]
 dependencies = [ "NadeoServices" ]
+optional_dependencies = [ "UltimateMedalsExtended" ]
